--- a/src/app/crud/editstudent/editstudent.component.html
+++ b/src/app/crud/editstudent/editstudent.component.html
@@ -1,1 +1,37 @@
-<p>editstudent works!</p>
+<div class="container">
+    <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+        <div class="container h-100">
+            <div class="row d-flex justify-content-center align-items-center
+    h-100">
+                <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                    <div class="card" style="border-radius: 3px;">
+                        <div class="card-body p-5">
+                            <h2 class="text-uppercase text-center mb-5">EDIT
+                                FORM</h2>
+                            <form [formGroup]="updateForm" (ngSubmit)="update()">
+                                <div class="form-outline mb-4">
+                                    <input type="text" class="form-control
+    form-control-lg" formControlName="name" />
+                                    <label class="form-label" for="form3Example4cg">Name</label>
+                                </div>
+                                <div class="form-outline mb-4">
+                                    <input type="text" class="form-control
+    form-control-lg" formControlName="username" />
+                                    <label class="form-label" for="form3Example3cg">Username</label>
+                                </div>
+                                <div class="form-outline mb-4">
+                                    <input type="text" class="form-control
+    form-controllg" formControlName="password" />
+                                    <label class="form-label" for="form3Example4cg">Password</label>
+                                </div>
+                                <div class="d-flex justify-content-center">
+                                    <button type="submit" class="btn btn-success">UPDATE</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
