--- a/src/app/crud/liststudent/liststudent.component.html
+++ b/src/app/crud/liststudent/liststudent.component.html
@@ -11,14 +11,14 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let s of student">
-                <td>{{s.id}}</td>
-                <td>{{s.name}}</td>
-                <td>{{s.username}}</td>
-                <td>{{s.password}}</td>
+            <tr *ngFor="let stu of students">
+                <td>{{stu.id}}</td>
+                <td>{{stu.name}}</td>
+                <td>{{stu.username}}</td>
+                <td>{{stu.password}}</td>
                 <td>
-                    <button type="button" class="btn btn-outline-warning" style="border:solid 2px black">EDIT</button>
-                    <button type="button" class="btn btn-outline-danger" style="border:solid 2px black">Delete</button>
+                    <button type="button" class="btn btn-warning" [routerLink]="['/edit']" [state]="stu">EDIT</button> ||
+                    <button type="button" class="btn btn-danger">Delete</button>
                 </td>
             </tr>
         </tbody>
