--- a/src/app/crud/login/login.component.html
+++ b/src/app/crud/login/login.component.html
@@ -19,7 +19,7 @@
                                 </div>
                                 <div class="d-flex justify-content-center">
                                     <button type="submit"
-                                        class="btn btn-success btn-block btnlg gradient-custom4 text-body">LOGIN</button>
+                                        class="btn btn-success btn-block btnlg">LOGIN</button>
                                 </div>
                                 <p class="text-center text-muted mt-5 mb-0">
                                     <a href="#!" class="fw-bold text-body" [routerLink]="['/register']"><u>REGISTER
