--- a/src/app/crud/liststudent/liststudent.component.html
+++ b/src/app/crud/liststudent/liststudent.component.html
@@ -18,7 +18,7 @@
                 <td>{{stu.password}}</td>
                 <td>
                     <button type="button" class="btn btn-warning" [routerLink]="['/edit']" [state]="stu">EDIT</button> ||
-                    <button type="button" class="btn btn-danger">Delete</button>
+                    <button type="button" class="btn btn-danger" (click) = "deleteStudent(stu.id)">Delete</button>
                 </td>
             </tr>
         </tbody>
